--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "keyboard",
     "mouse"
   ],
-  "main": "gkm",
+  "main": "GKM.mjs",
   "author": "Tom Rochette <roctom@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/tomzx/gkm",
@@ -19,6 +19,7 @@
     "url": "https://github.com/tomzx/gkm/issues"
   },
   "dependencies": {
+    "desm": "^1.3.0",
     "eventemitter2": "~0.4.13"
   }
 }
