--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gkm",
+  "name": "gkm-class",
   "version": "0.2.0",
   "description": "Global Keyboard and Mouse listener",
   "keywords": [
